--- a/ScriptBuilder.csproj
+++ b/ScriptBuilder.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Script.cs" />
+    <Compile Include="ScriptSolution.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
